@@ -1,6 +1,9 @@
 # Put your release notes or change log information
 # in here.
 
+BLD-R2-6-2: Shantha Condamoor: 18-Jul-2014
+	Bug fix for Receiver ioc-sys0-bd02; Payload packets were not getting populated.
+	
 BLD-R2-6-1: Shantha Condamoor: 10-Jul-2014
 	Photon Energy Calc: etax changed from 0.125 to 125 per PCD
 	Added 10 more BLD data to waveform device support BLDApp/src/devBLDMCastWfRecv.c
